Corrects styling on Mobile GiftCard page.

--- a/src/styles/MobileResponsive.css
+++ b/src/styles/MobileResponsive.css
@@ -16,6 +16,7 @@
     body {
         margin-left: 1rem;
         margin-right: 1rem;
+        margin-bottom: 0;
     }
 
     .mobile-only {
@@ -30,6 +31,11 @@
         position: unset;
         bottom: unset;
         margin-top: 4rem;
+        padding: 0;
+    }
+
+    .logo {
+        margin: -0.3rem 0 0 2rem;
     }
 
     .copyright {
@@ -196,6 +202,7 @@
         margin: 0 -1rem;
         padding-left: 1rem;
         padding-right: 1rem;
+        padding-top: 50px;
         background: #F8EFE0 !important;
     }
     
@@ -240,12 +247,25 @@
     }
 
     .gc-item-column.gc-item-column_image > img {
+        padding: 1rem 1rem 0;
         width: 100%;
+    }
+
+    .gc-wrapper h2, p.gc-subtitle {
+        text-align: center;
+    }
+
+    .gc-row--email {
+        margin-top: 1rem;
+    }
+
+    .form-errors-gc--empty {
+        height: 20px;
     }
 
     .container--calculator-activator {
         text-align: center;
-        padding-bottom: 1rem;
+        padding: 1rem 0 2rem;
     }
 
     .modal--gift-card {
